Fixed increment buttons & onResize error

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "work-procedure demo migrated to gh-pages",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "start" : "webpack-dev-server"
+    
   },
   "repository": {
     "type": "git",
@@ -17,7 +20,7 @@
   },
   "homepage": "https://github.com/techsoft3d/work-procedure#readme",
   "dependencies": {
-    "webpack": "^4.44.0",
+    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
